# piweather

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
am2315-hal/: Cargo.toml
am2315-hal/src/: am2315.rs  error.rs  humidity.rs  lib.rs  temperature.rs  thermometer.rs
piweather-agent/: Cargo.toml
piweather-agent/src/: i2c.rs  lib.rs  main.rs
piweather-agent/src/sensors/: am2315.rs  mod.rs  pmsa003.rs
piweather-common/: Cargo.toml
piweather-common/src/: errors.rs  lib.rs  modality.rs  payload.rs
piweather-commons/: Cargo.toml
piweather-commons/src/: errors.rs  lib.rs  readouts.rs  sensors.rs
piweather-edge/: Cargo.toml
piweather-edge/src/: engine.rs  lib.rs  main.rs
piweather-edge/src/sensors/: am2315.rs  dummy.rs  mod.rs
piweather-edge/src/transmitters/: http.rs
piweather-edge/src/utils/: logging.rs
piweather-server/: Cargo.toml
piweather-server/src/: main.rs
