[workspace]
resolver = "2"
members = [
    "piweather-agent",
    "piweather-common"
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Morgan Funtowicz"]
homepage = "https://github.com/mfuntowicz/piweather"

[workspace.dependencies]
chrono = { version = "0.4" }
i2cdev = { version = "0.6" }
tracing = { version = "0.1" }
serde = { version = "1.0" }
smallvec = { version = "2.0.0-alpha.7" }
