[package]
edition = "2021"
name = "piweather-agent"
version = { workspace = true }
authors = ["Morgan Funtowicz"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
i2cdev = { workspace = true }
piweather-common = { path = "../piweather-common" }
serde = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[profile.release]
lto = "thin"